# codemerge

./: .gitignore  AGENTS.md  Cargo.toml  README.md  RELEASE_NOTES.md  build.rs
.github/workflows/: ci.yml  release.yml
benches/: preview_benches.rs  processor_benches.rs  service_benches.rs
benches/support/: mod.rs
packaging/linux/: codemerge.desktop
packaging/macos/: Info.plist.template
packaging/windows/: codemerge.iss
scripts/: build.ps1  build.sh  package-macos.sh
src/: domain.rs  error.rs  lib.rs  main.rs
src/app/: message.rs  mod.rs  model.rs  theme.rs  view.rs
src/app/update/: blacklist.rs  config.rs  file.rs  i18n.rs  mod.rs  process.rs  ui.rs
src/components/: blacklist_editor.rs  config_panel.rs  file_selector.rs  mod.rs  preflight_card.rs  progress_area.rs  result_viewer.rs  stats_cards.rs  summary_panel.rs  toast.rs  tree_view.rs
src/processor/: archive.rs  error.rs  merger.rs  mod.rs  reader.rs  stats.rs  walker.rs
src/services/: external_link.rs  mod.rs  preflight.rs  preview.rs  process.rs  runtime.rs  settings.rs  tree.rs
src/ui/: assets.rs  mod.rs  models.rs  perf.rs  preview_model.rs  result_model.rs  selection_model.rs  state.rs  workspace.rs
src/ui/workspace/: actions.rs  background.rs  chrome.rs  model.rs  panels.rs  tree_palette.rs  view.rs
src/ui/workspace/model/: blacklist.rs  content_preview.rs  mod.rs  status.rs  tests.rs  tree.rs
src/utils/: app_metadata.rs  config_store.rs  i18n.rs  mod.rs  path.rs  temp_file.rs
tests/: perf_counter_tests.rs  processor_tests.rs
