[package]
name = "codemerge"
version = "0.1.0"
edition = "2024"
description = "Desktop file merge tool for Linux and Windows."
license = "MIT"
repository = "https://github.com/hellotime/codemerge"

[dependencies]
anyhow = "1.0.102"
arboard = "3.6.1"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
futures = "0.3.31"
globset = "0.4.18"
iced = { version = "0.14.0", features = ["tokio"] }
iced_aw = { version = "0.13.0", default-features = false }
iced_fonts = { version = "0.3.0", features = ["bootstrap", "fontawesome"] }
ignore = "0.4.25"
dirs = "6.0.0"
minifier = "0.3.6"
minify-html = "0.18.1"
once_cell = "1.21.3"
regex = "1.12.3"
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.25.0"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["fs", "io-util", "rt", "sync", "time"] }
tokio-util = "0.7.17"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = 0

[package.metadata.deb]
maintainer = "CodeMerge Maintainers"
copyright = "2026, CodeMerge"
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
  ["target/release/codemerge", "usr/bin/codemerge", "755"],
  ["README.md", "usr/share/doc/codemerge/README.md", "644"],
]
