[package]
name = "codemerge"
version = "6.0.0"
edition = "2024"
description = "Desktop file merge tool for Linux, macOS, and Windows."
license = "MIT"
repository = "https://github.com/hellotime/codemerge"

[dependencies]
anyhow = "1.0.98"
arboard = "3.6.1"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
futures = "0.3.31"
gpui = { version = "0.2.2", features = ["test-support"] }
gpui-component = "0.5.1"
globset = "0.4.18"
include_dir = "0.7.4"
ignore = "0.4.25"
dirs = "6.0.0"
minifier = "0.3.6"
minify-html = "0.18.1"
once_cell = "1.21.3"
regex = "1.12.3"
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.25.0"
tokio = { version = "1.49.0", features = ["fs", "io-util", "rt", "rt-multi-thread", "sync", "time"] }
tokio-util = "0.7.17"
zip = { version = "8.4.0", default-features = false, features = ["deflate"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "processor_benches"
harness = false

[[bench]]
name = "service_benches"
harness = false

[[bench]]
name = "preview_benches"
harness = false

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[target.'cfg(windows)'.dependencies]
raw-window-handle = "0.6.2"
windows = { version = "0.61.3", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = 0

[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = 1

[package.metadata.deb]
maintainer = "CodeMerge Maintainers"
copyright = "2026, CodeMerge"
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
  ["target/release/codemerge", "usr/bin/codemerge", "755"],
  ["packaging/linux/codemerge.desktop", "usr/share/applications/codemerge.desktop", "644"],
  ["assets/fonts/logo.svg", "usr/share/icons/hicolor/scalable/apps/codemerge.svg", "644"],
  ["README.md", "usr/share/doc/codemerge/README.md", "644"],
]
